name:                frp-toy
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Dave Laing
maintainer:          dave.laing.80@gmail.com
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     FRPToy.Types
                     , FRPToy.Run
                     , FRPToy.Event
                     , FRPToy.Behavior
                     , FRPToy.Moment
                     , FRPToy.Example
                     , Scratch
  build-depends:       base >=4.9 && <4.11
                     , mtl
                     , transformers
                     , containers
                     , lens
                     , stm
                     , primitive
                     , prim-uniq
                     , dependent-sum
                     , dependent-map
                     , contravariant
                     , distributive
                     , free
                     , comonad
  hs-source-dirs:      src
  default-language:    Haskell2010
